syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message CreateProductResponse {
  int32 id = 1;
}

message GetProductRequest {
  int32 id = 1;
}

message GetProductResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}
